[FE] fix wrapping bug

--- a/css/sys.css
+++ b/css/sys.css
@@ -38,6 +38,7 @@ body {
     position: relative;
     bottom: 50px;
     border: 2px solid #624b0a;
+    white-space: normal;
 }
 
 img#messageSpeaker {
